2008-03-12: 
removed warning() in findPeaks.MS1() which caused a memory explosion ;-)

2008-02-25: 1.11.15
added fillPeaks.mean
findPeaks.centWave: generates a warning if data seems to be not in centroid mode 
remove global variables in .group.mzClust
fix sampclass if all directories are "redundant"

several small fixes towards Pipelining
Fix in plot(eic) for xcmsEIC with absent groups

2008-01-15: 1.11.13
added xcmsFragments Class for handling of Tandem MS / MS^n
renamed hra_clust stuff to mzClust

2008-01-15: 1.11.13
Revised pipeline framework. Documentation forthcoming.
Added hra_clust for m/z alignment to xcmsSet
Added getMsnScan to xcmsRaw for Tandem MS / Ion Trap data

2007-12-28: 1.11.12
findPeaks.centWave: speedup for m/z ROI search

2007-12-07: 1.11.11
xcmsSet.R: Initial import of single-Spectra Alignment group.mzAlign
xcmsPipeline.R:perform(): Fixed handling of character parameters in xcmsPipeline
xcmsSet(): Fixed a typo in mzData Filepattern
utils.R:uncapitalize(): No CamelCaps for all-caps e.g. ABBRV

2007-12-06: 1.11.10
Fixed a bug in findPeaks.centWave: NaN was assigned as peak intensity in some rare cases

2007-12-05: 1.11.9
Added mzData precursorIntensity parsing
Passing more MSn related slots to xcmsRaw
Added findPeaks.MS1(), which simply returns Peaks reported as precursorIon 

2007-12-01: 1.11.9
Pass further parameters down to findPeaks-MSW
Moved Meta-Data for MSn to xcmsRaw object and changed MSn to all-vectors 
	
2007-11-21: 1.11.9
enhanced xcmsRaw() to read MSn spectra
Fixed a typo in protocol code

2007-11-13: 1.10.6 & 1.11.8
Removed unnecessary use of data.frame in findPeaks.centWave(), this fixes
a long delay when large peaklists are generated

2007-11-12: 1.10.5 & 1.11.7
Increased buffer size in findMZBoxes() to catch a rare bug

2007-11-08: 1.10.4 & 1.11.6
Standardised peak area calculation by introducing scan-distance multiplier to findPeaks.centWave()

2007-11-07: 1.10.3 & 1.11.5