@@ -2,6 +2,7 @@ useDynLib(xcms)
 
 import("methods")
 importFrom("graphics", "plot")
+importFrom("Rgraphviz", "plot") 
 
 export(
        "etg",
